--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 	<title>Astronomy Calc</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@200;300;400;500;600;700&display=swap"
-		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;800&display=swap" rel="stylesheet">
 	<style>
 		body {
-			font-size: 12px;
-			font-family: 'Noto Sans Mono', monospace;
+			font-size: 14px;
+			font-family: 'Rubik', sans-serif;
 		}
 
 		.copy-container {
@@ -32,23 +31,23 @@
 	</style>
 </head>
 
-<body class="p-2">
-	<h1 class="text-center">Commands</h1>
-	<div class="container-fluid">
-		<div class="row">
+<body class="p-2 bg-light bg-gradient">
+	<h1 class="text-center mt-2">Commands</h1>
+	<div class="container">
+		<div class="row justify-content-md-center">
 			<div class="col-2">
-				<div class="list-group">
-					<button class="list-group-item" onclick="menuClick('utils')">Utils</button>
-					<button class="list-group-item" onclick="menuClick('golang')">Golang</button>
-					<button class="list-group-item" onclick="menuClick('docker')">Docker</button>
-					<button class="list-group-item" onclick="menuClick('kubernetes')">Kubernetes</button>
-					<button class="list-group-item" onclick="menuClick('mongodb')">MongoDB</button>
-					<button class="list-group-item" onclick="menuClick('elastic')">Elastic</button>
-					<button class="list-group-item" onclick="menuClick('jenkins')">Jenkins</button>
-					<button class="list-group-item" onclick="menuClick('uninstall')">Uninstall</button>
+				<div class="list-group my-3 shadow shadow border border-secondary rounded-0">
+					<button class="list-group-item list-group-item-action" onclick="menuClick('utils')">Utils</button>
+					<button class="list-group-item list-group-item-action" onclick="menuClick('golang')">Golang</button>
+					<button class="list-group-item list-group-item-action" onclick="menuClick('docker')">Docker</button>
+					<button class="list-group-item list-group-item-action" onclick="menuClick('kubernetes')">Kubernetes</button>
+					<button class="list-group-item list-group-item-action" onclick="menuClick('mongodb')">MongoDB</button>
+					<button class="list-group-item list-group-item-action" onclick="menuClick('elastic')">Elastic</button>
+					<button class="list-group-item list-group-item-action" onclick="menuClick('jenkins')">Jenkins</button>
+					<button class="list-group-item list-group-item-action" onclick="menuClick('uninstall')">Uninstall</button>
 				</div>
 			</div>
-			<div class="col-9" id="content">
+			<div class="col-6" id="content">
 			</div>
 		</div>
 	</div>
@@ -118,27 +117,32 @@
 		function populateGeneric(data) {
 			let card = document.createElement("div");
 			card.classList.add("card");
-			card.classList.add("mb-3");
+			card.classList.add("my-3");
+			card.classList.add("shadow");
+			card.classList.add("rounded-0");
+			card.classList.add("border-secondary");
 			if (data.id) card.id = data.id;
 
 			if (data.title) {
 				let cardHeader = document.createElement("div");
 				cardHeader.classList.add("card-header");
 				cardHeader.classList.add("fs-5");
+				cardHeader.classList.add("fw-bold");
 				cardHeader.innerHTML = data.title;
 				card.appendChild(cardHeader);
 			}
 
 			let cardBody = document.createElement("div");
 			cardBody.classList.add("card-body");
-			if (data.commands)
+			if (data.commands) {
 				data.commands.forEach(cmd => {
 					cardBody.appendChild(generateCommandDisplayWithCopyOption(cmd));
 				});
+			}
 			card.appendChild(cardBody);
 			if (data.children && data.children.length > 0) {
 				data.children.forEach(child => {
-					cardBody.appendChild(populateGeneric(this, child));
+					cardBody.appendChild(populateGeneric(child));
 				});
 			}
 			return card;
