--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Astronomy Calc</title>
+	<title>Commands</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
@@ -28,26 +28,42 @@
 		.copy-container:hover .copy-button {
 			opacity: 1;
 		}
+
+		.commandHover:hover {
+			font-weight: bold;
+		}
+
+		.fixedHeight {
+			height: 90vh;
+		}
 	</style>
 </head>
 
 <body class="p-2 bg-light bg-gradient">
-	<h1 class="text-center mt-2">Commands</h1>
+	<h1 class="text-center mb-3 p-2 border-bottom border-dark">Common Commands</h1>
 	<div class="container">
 		<div class="row justify-content-md-center">
 			<div class="col-2">
-				<div class="list-group my-3 shadow shadow border border-secondary rounded-0">
-					<button class="list-group-item list-group-item-action" onclick="menuClick('utils')">Utils</button>
-					<button class="list-group-item list-group-item-action" onclick="menuClick('golang')">Golang</button>
-					<button class="list-group-item list-group-item-action" onclick="menuClick('docker')">Docker</button>
-					<button class="list-group-item list-group-item-action" onclick="menuClick('kubernetes')">Kubernetes</button>
-					<button class="list-group-item list-group-item-action" onclick="menuClick('mongodb')">MongoDB</button>
-					<button class="list-group-item list-group-item-action" onclick="menuClick('elastic')">Elastic</button>
-					<button class="list-group-item list-group-item-action" onclick="menuClick('jenkins')">Jenkins</button>
-					<button class="list-group-item list-group-item-action" onclick="menuClick('uninstall')">Uninstall</button>
+				<div class="list-group shadow shadow border border-secondary">
+					<button class="list-group-item list-group-item-action" id="menu_utils"
+						onclick="menuClick('utils')">Utils</button>
+					<button class="list-group-item list-group-item-action" id="menu_golang"
+						onclick="menuClick('golang')">Golang</button>
+					<button class="list-group-item list-group-item-action" id="menu_docker"
+						onclick="menuClick('docker')">Docker</button>
+					<button class="list-group-item list-group-item-action" id="menu_kubernetes"
+						onclick="menuClick('kubernetes')">Kubernetes</button>
+					<button class="list-group-item list-group-item-action" id="menu_mongodb"
+						onclick="menuClick('mongodb')">MongoDB</button>
+					<button class="list-group-item list-group-item-action" id="menu_elastic"
+						onclick="menuClick('elastic')">Elastic</button>
+					<button class="list-group-item list-group-item-action" id="menu_jenkins"
+						onclick="menuClick('jenkins')">Jenkins</button>
+					<button class="list-group-item list-group-item-action" id="menu_uninstall"
+						onclick="menuClick('uninstall')">Uninstall</button>
 				</div>
 			</div>
-			<div class="col-6" id="content">
+			<div class="col-10 overflow-scroll fixedHeight" id="content">
 			</div>
 		</div>
 	</div>
@@ -58,15 +74,32 @@
 		var headers = [];
 
 		// ELEMENTS
+		var activeElement = null;
+		var activeMenu = null;
 
 		async function fetchReadme(page) {
 			const response = await fetch("./commands.json");
 			commands = await response.json();
 		}
 
+		function showCommand(elementId) {
+			const targetElement = document.getElementById(elementId);
+			if (activeElement) {
+				activeElement.style.display = "none";
+			}
+			targetElement.style.display = "block";
+			activeElement = targetElement;
+		}
+
 		function menuClick(elementId) {
 			const targetElement = document.getElementById(elementId);
-			targetElement.scrollIntoView({ behavior: 'smooth' });
+			const targetMenu = document.getElementById(`menu_${elementId}`);
+			if (activeElement) activeElement.style.display = "none";
+			if (activeMenu) activeMenu.classList.remove("active");
+			targetElement.style.display = "block";
+			targetMenu.classList.add("active");
+			activeElement = targetElement;
+			activeMenu = targetMenu;
 		}
 
 		function copyCommand(id, data) {
@@ -87,10 +120,7 @@
 			element.classList.add("copy-container");
 			element.classList.add("font-monospace");
 			element.classList.add("bg-secondary-subtle");
-			element.classList.add("mb-1");
-			element.classList.add("border");
-			element.classList.add("border-secondary-subtle");
-			element.classList.add("rounded-1");
+			element.classList.add("commandHover");
 			element.id = rand;
 			element.onclick = () => copyCommand(rand, data);
 
@@ -115,22 +145,28 @@
 		}
 
 		function populateGeneric(data) {
-			let card = document.createElement("div");
-			card.classList.add("card");
-			card.classList.add("my-3");
-			card.classList.add("shadow");
-			card.classList.add("rounded-0");
-			card.classList.add("border-secondary");
-			if (data.id) card.id = data.id;
+			let div = document.createElement("div");
+			div.classList.add("mb-5");
+			if (data.id) {
+				div.id = data.id;
+			} else div.classList.add("mt-2");
 
 			if (data.title) {
-				let cardHeader = document.createElement("div");
-				cardHeader.classList.add("card-header");
-				cardHeader.classList.add("fs-5");
+				let cardHeader = document.createElement("h1");
+				if (!data.id) cardHeader = document.createElement("h3");
+				cardHeader.classList.add("mb-3");
+				cardHeader.classList.add("pb-2");
 				cardHeader.classList.add("fw-bold");
+				cardHeader.classList.add("border-bottom");
+				cardHeader.classList.add("border-dark");
 				cardHeader.innerHTML = data.title;
-				card.appendChild(cardHeader);
+				div.appendChild(cardHeader);
 			}
+
+			let card = document.createElement("div");
+			card.classList.add("card");
+			if (data.id) card.classList.add("shadow");
+			card.classList.add("border-secondary");
 
 			let cardBody = document.createElement("div");
 			cardBody.classList.add("card-body");
@@ -145,7 +181,8 @@
 					cardBody.appendChild(populateGeneric(child));
 				});
 			}
-			return card;
+			div.appendChild(card);
+			return div;
 		}
 
 		(async () => {
@@ -153,7 +190,9 @@
 			let content = document.getElementById("content");
 			commands.forEach(command => {
 				content.appendChild(populateGeneric(command));
+				document.getElementById(command.id).style.display = "none";
 			});
+			menuClick("utils");
 		})()
 	</script>
 </body>
